--- a/GlobalAdvanceFind_SL/GlobalAdvanceFind_SL.csproj
+++ b/GlobalAdvanceFind_SL/GlobalAdvanceFind_SL.csproj
@@ -64,7 +64,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BindableDataGrid, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="BindableDataGrid">
+      <HintPath>..\References\BindableDataGrid.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="System.ComponentModel.DataAnnotations, Version=2.0.5.0, Culture=neutral, PublicKeyToken=ddd0da4d3e678217" />
     <Reference Include="System.Runtime.Serialization" />
